classDiagram
    class SerializableDomainObject {
        <<Protocol>>
        +to_dict() dict
    }

    class FeatureExportable {
        <<Protocol>>
        +to_feature_dict() dict
    }

    class IdentifiableDomainObject {
        <<Protocol>>
        +object_key() str
        +display_name() str
    }

    class Summarizable {
        <<Protocol>>
        +summarize() Any
    }

    class RiskScoringStrategy {
        <<Protocol>>
        +score_row(row) Any
        +score_dataframe(df) Any
    }

    class SimulationStrategy {
        <<Protocol>>
        +simulate_object(args, kwargs) Any
    }

    class Asteroid
    class AsteroidIdentity
    class Orbit
    class PhysicalProperties
    class CloseApproach
    class CloseApproachHistory
    class CloseApproachSummary
    class SentryRiskSignal
    class RiskScorer
    class MonteCarloEngine
    class OrbitalMonteCarloEngine

    SerializableDomainObject <|.. Asteroid
    FeatureExportable <|.. Asteroid
    IdentifiableDomainObject <|.. Asteroid
    SerializableDomainObject <|.. AsteroidIdentity
    SerializableDomainObject <|.. Orbit
    SerializableDomainObject <|.. PhysicalProperties
    SerializableDomainObject <|.. CloseApproach
    SerializableDomainObject <|.. CloseApproachHistory
    Summarizable <|.. CloseApproachHistory
    SerializableDomainObject <|.. CloseApproachSummary
    SerializableDomainObject <|.. SentryRiskSignal
    RiskScoringStrategy <|.. RiskScorer
    SimulationStrategy <|.. MonteCarloEngine
    SimulationStrategy <|.. OrbitalMonteCarloEngine
